# py_project_template

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  AGENTS.md  Makefile  README.md  README.md.jinja  copier.yml  pyproject.toml  pyproject.toml.jinja
.claude/: mcp.json
.claude/commands/: release.md
.claude/skills/: pre-commit-check.md
config/: _config.yaml.jinja  config-dev.yaml  config.yaml
scripts/: pre-commit.sh  start_remote_worker.sh  update-agent-context.sh
specs/001-cli/: spec.md
src/: __init__.py.jinja  __main__.py  app.py  app.py.jinja  main.py
src/utils/: __init__.py  config.py  custom_logging.py  dask.py  utils.py
templates/: plan-template.md
